--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "1.7.19",
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
     "autoprefixer": "^10.4.13",
+    "clsx": "^2.1.1",
     "contentlayer2": "0.4.6",
     "esbuild": "0.20.2",
+    "framer-motion": "^11.2.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "image-size": "1.0.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-contentlayer2": "0.4.6",
     "next-themes": "^0.3.0",
@@ -40,6 +45,7 @@
     "remark": "^15.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "unist-util-visit": "^5.0.0"
   },
